syntax = "proto3";

option go_package = "./;user";
package proto;

service SearchService {
  //Login in by username and password
  rpc Login(LoginRequest) returns (LoginResponse) {}
  //Update user nickname
  rpc UpdateNickname(UpdateNicknameRequest) returns (UpdateNicknameResponse){}
  //Update profile photo
  rpc UpdateProfile(UpdateProfileRequest) returns(UpdateProfileResponse){}
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string nickname = 1;
  string profile = 2;
  string token = 3;
  uint32 err = 4;
}
message UpdateNicknameRequest  {
  string username = 1;
  string nickname = 2;
  string token = 3;
}

message UpdateNicknameResponse {
  uint32 err = 1;
}

message  UpdateProfileRequest {
  string username = 1;
  string profile = 2;
  string token = 3;
}

message UpdateProfileResponse {
  uint32 err = 1;
}




